feat: add debug config

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
       Chrome <script>document.write(process.versions.chrome)</script>,
       and Electron <script>document.write(process.versions.electron)</script>.
     </p>
+    <canvas id="canvas"></canvas>
+    <input type="file" id="file">
+    <script src="./js/index.js"></script>
   </body>
 </html>
