--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>Hello</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -14,6 +15,13 @@
     </p>
     <canvas id="canvas"></canvas>
     <input type="file" id="file">
+    <div class="text-center">
+      <video controls>
+        <source src="./111.mp4" type="video/mp4">
+        <p>Your browser doesn't support HTML5 video. Here is
+           a <a href="myVideo.mp4">link to the video</a> instead.</p>
+      </video>
+    </div>
     <script src="./js/index.js"></script>
   </body>
 </html>
