--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="file" id="file">
     <div class="text-center">
       <video controls>
-        <source src="/video/111.mp4" type="video/mp4">
+        <source src="./video/111.mp4" type="video/mp4">
         <p>Your browser doesn't support HTML5 video. Here is
            a <a href="myVideo.mp4">link to the video</a> instead.</p>
       </video>
